# rust-fun

./: Cargo.toml  README.md  rust-fun.cast
src/: main.rs  math_fun.rs  primes_fun.rs
src/primes_fun/: primes_redis_fun.rs  primes_tokio_fun.rs
